Add /api/state and /api/stream/state to stream the boiler state and the temperature in a single call. Temperature is sent in both celcius and fahrenheit
